--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
@@ -28,7 +28,11 @@
 		text-align: center;
 
 		&:focus {
-			border-color: v.$mode-base-form-input-focus-border-color-light;
+			border-color: v.$theme-mode-blue-queen-focus-border-color-light;
+		}
+
+		&:focus + .name-centering-container__char-count-centering-container {
+			border-color: v.$theme-mode-blue-queen-focus-border-color-light;
 		}
 	}
 
@@ -55,7 +59,7 @@
 		margin-left: (v.$edit-item-name-input-width / 2) + v.$edit-item-name-input-border-width +
 			v.$edit-item-name-input-padding + (v.$edit-item-name-char-counter-container-width / 2);
 		border: v.$edit-item-name-input-border-width solid v.$mode-item-view-form-input-border-color-light;
-		border-left: v.$edit-item-name-input-border-width solid transparent;
+		border-left: none;
 		border-radius: 0 v.$form-input-border-radius v.$form-input-border-radius 0;
 		height: v.$edit-item-name-centering-container-height - (v.$edit-item-name-input-border-width * 2);
 		width: v.$edit-item-name-char-counter-container-width;
@@ -109,7 +113,7 @@
 		font-family: Arial, Helvetica, sans-serif;
 
 		&:focus {
-			border-color: v.$mode-base-form-input-focus-border-color-light;
+			border-color: v.$theme-mode-blue-queen-focus-border-color-light;
 		}
 	}
 
@@ -121,7 +125,7 @@
 		font-size: 14px;
 
 		&:focus {
-			border-color: v.$mode-base-form-input-focus-border-color-light;
+			border-color: v.$theme-mode-blue-queen-focus-border-color-light;
 		}
 	}
 
@@ -131,7 +135,7 @@
 		background-color: v.$mode-item-view-form-input-background-color-light;
 
 		&:focus {
-			border-color: v.$mode-base-form-input-focus-border-color-light;
+			border-color: v.$theme-mode-blue-queen-focus-border-color-light;
 		}
 	}
 
